# shy-the-shell-ai

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  config.rs  init.rs  lib.rs  main.rs  repl.rs  test_dropdown.rs
