[package]
name = "shy"
version = "0.1.0"
edition = "2021"
description = "AI-powered shell assistant"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reedline = "0.26"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
spinners = "4.1"
anyhow = "1.0"
dirs = "5.0"
futures-util = "0.3"
serde_json = "1.0"
crossterm = "0.27"
console = "0.15"
regex = "1.10"
