[package]
name = "shy"
version = "0.1.5"
edition = "2021"
description = "SHell AI Assistant - Don't be shy, just ask your shell"
authors = ["Piotr Migdał <pmigdal@gmail.com>"]
license = "MIT"
repository = "https://github.com/yourusername/shy-the-shell-ai"
homepage = "https://github.com/yourusername/shy-the-shell-ai"
keywords = ["cli", "ai", "shell", "assistant", "openrouter"]
categories = ["command-line-utilities"]

[lib]
name = "shy"
path = "src/lib.rs"

[[bin]]
name = "shy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reedline = "0.26"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
spinners = "4.1"
anyhow = "1.0"
dirs = "5.0"
futures-util = "0.3"
serde_json = "1.0"
crossterm = "0.27"
console = "0.15"
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
